--- a/src/style/_fonts.scss
+++ b/src/style/_fonts.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Roboto:wght@400;700&display=swap');
+
 //@font-face {
 //	font-family: 'Montserrat';
 //	src: url('fonts/montserrat-v23-latin_cyrillic-700.woff2') format('woff2'),
