--- a/src/index.scss
+++ b/src/index.scss
@@ -1,66 +1,69 @@
+@import "./style/reset";
+@import "./style/vars";
+@import ".//style/fonts";
 
-@import './style/reset';
-@import './style/vars';
-@import './/style/fonts';
-
-.container{
+.container {
 	max-width: 77.5rem;
-	padding: 0 .625rem;
+	padding: 0 10px;
 	margin: 0 auto;
 }
-.containerL{
+.containerL {
 	max-width: 91.25rem;
-	padding: 0 .625rem;
+	padding: 0 10px;
 	margin: 0 auto;
 }
-.wrapper{
+.wrapper {
 	display: flex;
 	flex-direction: column;
 	min-height: 100%;
 	overflow: hidden;
 }
-.page{
+.page {
 	flex: 1 1 auto;
-	min-height: 100%;
-
 }
-.row{
+.row {
 	display: flex;
 	justify-content: space-between;
-
 }
 .btn {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	border-radius: .625rem;
+	border-radius: 0.625rem;
 	font-weight: 700;
 	font-family: $fontSecond;
-	padding: 1.4375rem 2.375rem 1.75rem;
+	padding: 1.278em 2.11em 1.556em;
 	font-size: 1.13rem;
 	line-height: 1.11;
-
+	color: $secondColor;
 
 	&--orange {
 		background-color: $btnColor;
-		transition:  .5s;
-		&:hover{
+		transition: 0.4s;
+		&:hover {
 			background-color: #fab752;
 		}
 	}
-	&--white{
+	&--white {
 		background-color: #fff;
-		border: .0625rem solid #F0ECE8;
-		box-shadow: 0rem .25rem .625rem rgba(43, 43, 43, 0.04);
-		transition:  .3s;
-
-		&:hover{
-			border: .0625rem solid $btnColor;
+		border: 0.0625rem solid #f0ece8;
+		box-shadow: 0rem 0.25rem 0.625rem rgba(43, 43, 43, 0.04);
+		transition: 0.3s;
+		&:hover {
+			border: 1px solid $btnColor;
+		}
+	}
+	&--black {
+		background-color: $secondColor;
+		color: #fff;
+		transition: .3s;
+		&:hover {
+			background: #484747;
 		}
 	}
 }
 
-.btns-block{
+.btns-block {
 	display: flex;
 	justify-self: start;
 	gap: 1.75rem;
@@ -70,9 +73,15 @@
 	font-size: 1.25rem;
 	line-height: calc(22 / 20);
 	text-transform: uppercase;
-	letter-spacing: .075rem;
+	letter-spacing: 0.075rem;
 }
-.lagre-t {
+.medium-t {
+	font-weight: 700;
+	font-size: 1.5rem;
+	line-height: calc(34 / 24);
+	color: $secondColor;
+}
+.large-t {
 	font-weight: 700;
 	font-size: 2.625rem;
 	line-height: calc(58 / 42);
@@ -84,8 +93,7 @@
 .header {
 	background-color: #fff;
 
-
-	&__row{
+	&__row {
 		align-items: center;
 		padding: 2rem 0;
 	}
@@ -98,17 +106,16 @@
 
 	&__menu {
 		flex: 0 1 100%;
-
 	}
 
-	&__cart {}
+	&__cart {
+	}
 }
 .logo {
-	transition: .3s;
+	transition: 0.3s;
 	cursor: pointer;
 }
 .menu {
-
 	&__list {
 		display: flex;
 		justify-content: flex-start;
@@ -117,26 +124,27 @@
 		font-size: 1.06rem;
 		line-height: 1.76;
 		color: $secondColor;
-
+		margin-right: 1rem;
 	}
 
-	&__icon {}
+	&__icon {
+	}
 
 	&__link {
 		font-family: $fontSecond;
-		transition: .3s;
+		transition: 0.3s;
 		position: relative;
-		&:before{
-			content: '';
+		&:before {
+			content: "";
 			position: absolute;
 			bottom: 0;
 			width: 100%;
 			height: 1px;
 			background-color: $mainColor;
-			transition: .3s;
+			transition: 0.3s;
 			transform: scale(0);
 		}
-		&:hover::before{
+		&:hover::before {
 			color: $mainColor;
 			transform: scale(1);
 		}
@@ -150,13 +158,12 @@
 
 	&__wrapper {
 		position: relative;
-
 	}
 
 	&__link {
 		display: block;
-		img{
-			width: 2.125rem;
+		img {
+			min-width: 2.125rem;
 			height: 2.125rem;
 		}
 	}
@@ -171,26 +178,25 @@
 		width: 1.375rem;
 		height: 1.375rem;
 		background-color: $btnColor;
-		font-size: .75rem;
+		font-size: 0.75rem;
 		line-height: 1.17;
 		color: #fff;
 	}
 
 	&__button {
-		padding: 1rem 1.5rem 1.25rem;
+		padding: 0.94em 1.412em 1.176em;
 		margin-left: 1.5rem;
 		font-size: 1.06rem;
 		line-height: 1.18;
-		width: 9.1rem;
+		min-width: 8.57em;
 	}
 }
-
 
 //---------------------Header-bottom
 
 .header {
-
-	&__bottom {}
+	&__bottom {
+	}
 
 	&__bottom-row {
 		position: relative;
@@ -210,7 +216,7 @@
 		top: 0;
 		bottom: -3.125rem;
 		flex: 0 0 47%;
-		background: url('./img/header-bottom/main.jpg') no-repeat;
+		background: url("./img/header-bottom/main.jpg") no-repeat;
 		background-size: contain;
 		width: 47%;
 		padding-bottom: 60.3%;
@@ -218,7 +224,6 @@
 }
 
 .header-content {
-
 	&__title {
 		position: relative;
 		font-family: $fontMain;
@@ -228,14 +233,14 @@
 		margin-bottom: 0.27em;
 		color: $secondColor;
 
-		&::before{
-			content: '';
+		&::before {
+			content: "";
 			position: absolute;
 			top: -1.5625rem;
 			left: 0;
-			max-width: 8.75rem;
+			max-width: 2.333em;
 			width: 100%;
-			height: .25rem;
+			height: 0.067em;
 			background-color: $btnColor;
 		}
 	}
@@ -244,69 +249,66 @@
 		font-size: 1.5rem;
 		line-height: 1.58;
 		font-family: $fontSecond;
-		margin-bottom: 2.6875rem;
+		margin-bottom: 1.79em;
 	}
 
 	&__btns {
-		
 	}
 
-	&__button {}
+	&__button {
+	}
 }
-
 
 //------------------STATISTIC
 
 .statistic {
+	&__row {
+		padding-block: 11% 6%;
+		padding-inline: 2.6%;
+		gap: 1.75rem;
+		border-bottom: 1px solid #dad1ca;
+	}
 
-		&__row {
-			padding-block: 11% 6% ;
-			padding-inline: 2.6%;
-			gap: 1.75rem;
-			border-bottom: 1px solid #DAD1CA;
-		}
+	&__item {
+		text-align: center;
+	}
 
-		&__item {
-			text-align: center;
+	&__num {
+		font-size: 3.75rem;
+		font-weight: 700;
+		line-height: calc(80 / 60);
+		color: $secondColor;
+		margin-bottom: 0.3125rem;
+		span {
+			color: $btnColor;
 		}
+	}
 
-		&__num {
-			font-size: 3.75rem;
-			font-weight: 700;
-			line-height: calc(80 / 60);
-			color: $secondColor;
-			margin-bottom: .3125rem;
-			span{
-				color: $btnColor;
-			}
-		}
-
-		&__text {
-			font-size: 1.25rem;
-			line-height: calc(22/20);
-			font-family: $fontSecond;
-		}
+	&__text {
+		font-size: 1.25rem;
+		line-height: calc(22 / 20);
+		font-family: $fontSecond;
+	}
 }
-
 
 //-----------------------About_us
 
 .page {
-
-	&__about {}
+	&__about {
+	}
 }
 
 .about {
-
 	&__row {
 		column-gap: 1.75rem;
 		padding-block: 16.4%;
-
 	}
 
-	&__item-first {}
+	&__item-first {
+	}
 
-	&__item-second {}
+	&__item-second {
+	}
 }
 
 .item-first {
@@ -325,11 +327,11 @@
 		font-size: 1.125rem;
 		line-height: calc(30 / 18);
 		font-family: $fontSecond;
-		margin-bottom: 3.5rem;	
+		margin-bottom: 3.11em;
+		max-width: 32.44em;
 	}
 
 	&__img {
-
 		overflow: hidden;
 		object-fit: cover;
 	}
@@ -337,10 +339,7 @@
 	&__img:not(:last-child) {
 		margin-bottom: 2rem;
 	}
-
 }
-
-
 
 .item-second {
 	flex: 1 1 49%;
@@ -351,6 +350,7 @@
 	}
 
 	&__img {
+		width: 100%;
 		margin-bottom: 2.9375rem;
 	}
 
@@ -358,41 +358,544 @@
 		font-size: 1.125rem;
 		line-height: calc(30 / 18);
 		font-family: $fontSecond;
-		margin-bottom: 1.25rem;
+		margin-bottom: 1.11em;
 	}
 
-	&__list {}
+	&__list {
+	}
 
 	&__list-item {
+		margin-bottom: 1.11em;
+	}
+}
+.list-item {
+	position: relative;
+	font-size: 1.125rem;
+	line-height: calc(20 / 18);
+	font-family: $fontSecond;
+	color: $secondColor;
+	padding-left: 2.333em;
+
+	&::before {
+		content: "";
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+		left: 0;
+		background: url("./img/about/list-icon.svg") no-repeat;
+		background-size: contain;
+		width: 1.444em;
+		height: 1.444em;
+	}
+}
+
+//----------------------------------RESULT
+
+.results {
+	background-color: #fff;
+
+	&__row {
+		column-gap: 3.25rem;
+		padding-block: 16.4%;
+	}
+
+	&__content {
+		flex: 1 1 50%;
+	}
+
+	&__content-subtitle {
+		color: #fab752;
+		margin-bottom: 1em;
+	}
+
+	&__content-title {
+		max-width: 10.69em;
+		margin-bottom: 0.714em;
+	}
+
+	&__image {
+		flex: 1 1 50%;
+	}
+}
+
+.result {
+	&__statistic {
+	}
+
+	&__button {
+		display: inline-block;
+	}
+}
+
+.statistic-result {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(11rem, 1fr));
+	gap: 1.75rem 12%;
+	margin-bottom: 12.35%;
+
+	&__item {
+		display: flex;
+		column-gap: 1rem;
+		align-items: center;
+	}
+
+	&__image {
+		flex: 0 0 4.75rem;
+	}
+
+	&__data {
+	}
+
+	&__num {
+		font-size: 2.375rem;
+		line-height: calc(44 / 38);
+		font-weight: 700;
+		color: $secondColor;
+		margin-bottom: calc(9 / 38) + em;
+	}
+
+	&__text {
+		font-family: $fontSecond;
+		font-size: 1.125rem;
+		line-height: calc(20 / 18);
+	}
+}
+
+//----------------------VIDEO_BLOCK
+
+.look {
+	&__top {
+	}
+
+	&__bottom {
+	}
+}
+.top-look {
+	background-color: #ffd4a4;
+
+	&__cta {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		text-align: center;
+		padding-block: 16.4% 32.54%;
+	}
+
+	&__subtitle {
+		margin-bottom: 1em;
+	}
+
+	&__title {
+		max-width: 17.9em;
+		margin-bottom: 0.905em;
+	}
+
+	&__btns {
+	}
+}
+
+.btn--p {
+	padding-inline: 1.4em;
+	&:hover {
+		border: 1px solid $secondColor;
+	}
+}
+
+.bottom-look {
+	&__wrapper-p {
 		position: relative;
+		padding-bottom: 65.4%;
+	}
+	&__wrapper {
+		padding-bottom: 16.4%;
+		position: absolute;
+		left: 0;
+		//top: -33.333%;
+		transform: translateY(-29.3%);
+	}
+
+	&__video {
+		position: relative;
+		width: 100%;
+		border-radius: 57px;
+		padding-bottom: 56.4%;
+		overflow: hidden;
+		margin-bottom: 6.6%;
+		background: url("./img/video-block/bg.jpg") no-repeat;
+		background-size: contain;
+		cursor: pointer;
+
+		iframe {
+			z-index: 4;
+			position: absolute;
+			top: 0;
+			left: 0;
+			bottom: 0;
+			right: 0;
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+		img{
+			position: absolute;
+			transform: translate(-50%, -50%);
+			top: 50%;
+			left: 50%;
+			object-fit: contain;
+			cursor: pointer;
+		}
+
+	
+	}
+
+
+	&__text-block {
+	}
+}
+
+
+.block-text {
+	gap: 3rem;
+
+	&__item {
+		max-width: 35.5rem;
+	}
+
+	&__title {
+		margin-bottom: 0.46em;
+	}
+
+	&__text {
+		font-size: 1.125rem;
+		line-height: calc(30 / 18);
+		font-family: $fontSecond;
+	}
+}
+
+//----------------------HELP
+
+.help {
+	&__wrapper {
+		padding-bottom: 16.4%;
+	}
+	&__header {
+		margin-bottom: 5.25%;
+	}
+
+	&__button {
+		max-height: 4.05em;
+		align-self: end;
+	}
+
+	&__grid {
+		display: grid;
+		grid-template-columns: repeat(auto-fit, minmax(24.25rem, 1fr));
+		grid-auto-rows: 1fr;
+		gap: 1.75rem;
+	}
+
+	&__grid-item {
+	}
+	&__subtitle {
+		color: $btnColor;
+		margin-bottom: 1em;
+	}
+
+	&__title {
+		max-width: 13.6em;
+	}
+}
+
+
+.grid-item {
+	display: grid;
+	grid-template: auto 1fr auto / 1fr;
+	text-align: center;
+	padding: 3.5625rem 2.375rem;
+
+	&__icon {
+		max-width: 10.75rem;
+		max-height: 10.75rem;
+		margin-inline: auto;
+		align-items: center;
+		overflow: hidden;
+		margin-bottom: 1.5rem;
+		img {
+			object-fit: contain;
+			height: 100%;
+		}
+	}
+
+	&__title {
+		margin-bottom: 0.46em;
+	}
+
+	&__text {
+		font-family: $fontSecond;
+		font-size: 1.125rem;
+		line-height: calc(30 / 18);
+	}
+}
+
+//--------------------------------JOIN
+
+.join {
+	&__container {
+	}
+
+	&__wrapper {
+		background: url("./img/news/Frame.jpg");
+		border-radius: 40px;
+		width: 100%;
+		padding: 13.28% 4.91% 12.95%;
+		margin-bottom: 16.4%;
+	}
+
+	&__title {
+		max-width: 11.6em;
+	}
+
+	&__btns {
+	}
+
+	&__button {
+		max-height: 4.05em;
+		align-self: end;
+	}
+}
+
+.btn-b {
+}
+
+//------------------------TESTIMONALS
+
+.testimonials {
+	&__wrapper {
+		gap: 5.9%;
+		padding-bottom: 16.4%;
+	}
+
+	&__image {
+		position: relative;
+		flex: 1 1 50%;
+		padding-bottom: 3.25rem;
+	}
+
+	&__content {
+		display: flex;
+		flex-direction: column;
+		flex: 1 1 50%;
+		justify-content: center;
+	}
+
+	&__text {
+		font-family: $fontSecond;
+		font-size: 1.0625rem;
+		line-height: calc(30 / 17);
+		margin-bottom: 0.71em;
+	}
+
+	&__list {
+		margin-bottom: 8.34%;
+	}
+
+	&__list-item {
+		font-weight: 700;
+		margin-bottom: 0.8em;
+	}
+
+	&__button {
+		max-width: 10em;
+	}
+
+		&__subtitle {
+			margin-bottom: 1em;
+			color: $btnColor;
+		}
+	
+		&__title {
+			margin-bottom: 0.524em;
+			max-width: 10.36em;
+		}
+}
+
+.image-block {
+	&__img {
+	}
+
+	&__comment {
+	}
+}
+
+.comment {
+	position: absolute;
+	bottom: 0;
+	right: -8.7%;
+	font-family: $fontSecond; 
+	background: #ffffff;
+	border: 1px solid #f0ece8;
+	box-shadow: 0px 2px 12px rgba(43, 43, 43, 0.06);
+	border-radius: 12px;
+	padding: 4.25rem 2.5625rem;
+	max-width: 67.6%;
+
+	&__text {
+		font-size: 1.125rem;
+		line-height: calc(30 / 18);
+		margin-bottom: 0.9444em;
+	}
+
+	&__name {
+		font-weight: 700;
+		font-size: 1.125rem;
+		line-height: calc(20 / 18);
+		margin-bottom: 0.8333em;
+		color: $secondColor;
+	}
+
+	&__info {
+		font-size: 1.0625rem;
+		line-height: calc(20 / 17);
+	}
+	
+}
+
+
+//-----------------------NEWS
+
+.news {
+	background-color: #fff;
+
+	&__wrapper {
+		padding-block: 16.4%;
+	}
+
+	&__body {
+		position: relative;
+		column-gap: 1.75rem;
+		margin-bottom: 5.33%;
+		padding-bottom: 14rem;
+
+
+	}
+
+	&__btns {
+		justify-content: center;
+	}
+
+	&__title-block {
+		text-align: center;
+	}
+	&__subtitle {
+		color: $btnColor;
+		margin-bottom: 0.85em;
+	}
+	&__title {
+		margin-bottom: 1.167em;
+	}
+}
+
+
+
+
+
+.news-body {
+
+	&__wrapper{
+		//position: relative;	
+		//padding-bottom: 23.36%;
+
+	}
+
+	&__item {
+		flex: 1 1 50%;
+	}
+
+	&__image {}
+
+	&__card {
+		position: absolute;
+		right: 0;
+		//left: 0;
+		//top: 85.67%;
+		transform: translateY(-26.78%);
+
+	}
+
+	&__title {}
+}
+
+.card {
+	max-width: 44.92%;
+	width: 100%;
+	border: 1px solid #F0ECE8;
+	box-shadow: 0px 2px 12px rgba(43, 43, 43, 0.08);
+	border-radius: 12px;
+	padding: 4%;
+	background-color: #fff;
+
+	&__data {
+		display: flex;
+		align-items: center;
+		gap: 1rem;
+		font-size: 1.0625rem;
+		line-height: calc(20 / 17);
+		font-family: $fontSecond;
+		margin-bottom: 1.125rem;
+	}
+
+	&__data-tab {
+		color: $secondColor;
+		padding: 0.76em 1.35em 1em;
+		border: 1px solid #F0ECE8;
+		border-radius: 6px;
+		transition: .4s;
+		cursor: pointer;
+		&:hover{
+			border: 1px solid $btnColor;
+		}
+	}
+
+	&__data-date {}
+
+	&__title{
+		color: $secondColor;
+		margin-bottom: 1.21em;
+		max-width: 17.42em;
+	}
+
+	&__link{
+		position: relative;
+		z-index: 2;
+		display: inline-block;
+		font-weight: 700;
 		font-size: 1.125rem;
 		line-height: calc(20 / 18);
 		font-family: $fontSecond;
-		margin-bottom: 1.25rem;
 		color: $secondColor;
-		padding-left: 2.625rem;
-
+		max-width: 5em;
 		&::before{
-			content:'';
+			content: '';
+			z-index: -1;
 			position: absolute;
-			top: 50%;
-			transform: translateY(-50%);
-			left: 0;
-			background-image: url('./img/about/list-icon.svg');
-			width: 1.625rem;
-			height: 1.625rem;
+			left: -.6em;
+			bottom: 0;
+			width: 2.5em;
+			height: 1em;
+			border-radius: 5px;
+			background-color: #fab752;
+			transition: .4s;
 
 		}
+		&:hover::before{
+			background-color: $btnColor;
+		}
 	}
+
+
 }
-
-.btns-block {
-
-	&__button {}
+.card--right{
+	left: 0;
 }
-
-
-
-
 
 
