--- a/src/style/_reset.scss
+++ b/src/style/_reset.scss
@@ -1,5 +1,6 @@
 
 @import './vars';
+
 * {
 	padding: 0;
 	margin: 0;
@@ -81,7 +82,7 @@ ul li {
 
 img {
 	vertical-align: top;
-	width: 100%;
+	max-width: 100%;
 }
 
 h1,
