--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,13 @@
-@import "./style/reset";
-@import "./style/vars";
-@import ".//style/fonts";
 
+@import "./style/vars";
+@import "./style/reset";
+
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Roboto:wght@400;700&display=swap");
+
+
+body.lock{
+	overflow: hidden;
+}
 .container {
 	max-width: 77.5rem;
 	padding: 0 10px;
@@ -18,6 +24,7 @@
 	min-height: 100%;
 	overflow: hidden;
 }
+
 .page {
 	flex: 1 1 auto;
 }
@@ -56,11 +63,23 @@
 	&--black {
 		background-color: $secondColor;
 		color: #fff;
-		transition: .3s;
+		transition: 0.3s;
 		&:hover {
 			background: #484747;
 		}
 	}
+	@media(max-width: 1189px){
+		font-size: 1.06rem;
+	}
+	@media(max-width: 845px){
+		padding: 1em 1.8em 1.2em;
+	}
+	@media(max-width: 768px){
+		font-size: 0.9rem;
+		padding: 1em 1.8em 1.2em;
+
+	}
+
 }
 
 .btns-block {
@@ -74,6 +93,12 @@
 	line-height: calc(22 / 20);
 	text-transform: uppercase;
 	letter-spacing: 0.075rem;
+	@media(max-width:768px){
+		font-size: 1rem;
+	}
+	@media(max-width:576px){
+		font-size: 0.9rem;
+	}
 }
 .medium-t {
 	font-weight: 700;
@@ -86,6 +111,12 @@
 	font-size: 2.625rem;
 	line-height: calc(58 / 42);
 	color: $secondColor;
+	@media(max-width:768px){
+		font-size: 1.8rem;
+	}
+	@media(max-width:576px){
+		font-size: 1.5rem;
+	}
 }
 
 //------------------------Header
@@ -96,12 +127,17 @@
 	&__row {
 		align-items: center;
 		padding: 2rem 0;
+		@media(max-width: 768px){
+			padding: 1.3rem 0;
+
+		}
+
 	}
 
 	&__logo {
-		flex: 0 0 16%;
-		min-width: 10rem;
+		z-index: 100;
 		margin-right: 2.5rem;
+		
 	}
 
 	&__menu {
@@ -112,8 +148,28 @@
 	}
 }
 .logo {
+	display: flex;
+	column-gap: .5rem;
+	align-items: center;
 	transition: 0.3s;
+	flex: 0 0 16.45%;
+	min-width: 12.5rem;
 	cursor: pointer;
+	img{
+		width: 2.25rem;
+	}
+	&__txt{
+		font-weight: 700;
+		font-size: 1.3rem;
+		line-height: calc(34 / 24);
+		color: #090909;
+		@media(max-width:576px){
+			display: none;
+		}
+	}
+	@media(max-width:576px){
+		min-width: 3.125rem;
+	}
 }
 .menu {
 	&__list {
@@ -150,7 +206,10 @@
 		}
 	}
 }
+
+
 .cart {
+	z-index: 100;
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
@@ -165,6 +224,13 @@
 		img {
 			min-width: 2.125rem;
 			height: 2.125rem;
+			@media(max-width:576px){
+				min-width: 2rem;
+				height: 2rem;
+			}
+		}
+		@media(max-width:576px){
+			margin-right: 1rem;
 		}
 	}
 
@@ -181,6 +247,12 @@
 		font-size: 0.75rem;
 		line-height: 1.17;
 		color: #fff;
+		@media(max-width:576px){
+			min-width: 1rem;
+			height: 1rem;
+			font-size: 0.55rem;
+			transform: translate(-35%, 120%);
+		}
 	}
 
 	&__button {
@@ -189,6 +261,99 @@
 		font-size: 1.06rem;
 		line-height: 1.18;
 		min-width: 8.57em;
+		@media(max-width:576px){
+			display: none;
+		}
+	}
+}
+
+@media (max-width:768px){
+
+	.menu {
+		&__list {
+			transition: .4s;
+			flex-direction: column;
+			position: fixed;
+			z-index: 99;
+			right: -1.25rem;
+			top: 0;
+			width: 100%;
+			height: 100%;
+			background-color: #fff;
+			padding-top: 14.375rem;
+			font-size: 2em;
+			transform: translateX(200%);
+			overflow: auto;
+		}
+		&__list.active{
+			transform: translateX(0);
+		}
+		&__item{
+			min-width: 100%;
+			text-align: center;
+		}
+		&__link{
+			display: block;
+			&:hover::before {
+				display: none;
+			}
+		}
+	}
+	.cart{
+		&__button{
+			margin-right: 1rem;
+			font-size: 0.9rem;
+			margin-left: 1rem;
+		}
+	}
+
+	.burger{
+		z-index: 100;
+		display: inline-flex;
+		justify-content: center;
+		position: relative;
+		min-width: 2rem;
+		min-height: 2rem;
+		background-color: transparent;
+		margin-right: 1rem;
+
+		span,
+		&::before,
+		&::after{
+			position: absolute;
+			width: 100%;
+			height: 2px;
+			background-color: $btnColor;
+			border-radius: 1px;
+		}
+		span{
+			top: 50%;
+			transform: translateY(-50%);
+		}
+		&::before,
+		&::after{
+			content: '';
+		}
+		&::before{
+			top: .375rem;
+		}
+		&::after{
+			bottom: .375rem;
+		}
+		&__bg{
+			z-index: 99;
+			position: fixed;
+			top: 0;
+			left: 0;
+			right: 0;
+			width: 100%;
+			height: 110px;
+			background-color: #fff;
+			display: none;
+		}
+		&__bg.active{
+			display: block;
+		}
 	}
 }
 
@@ -199,7 +364,10 @@
 	}
 
 	&__bottom-row {
-		position: relative;
+		@media(max-width:768px){
+			flex-direction: column;
+			align-items: center;
+		}
 	}
 
 	&__bottom-content {
@@ -208,18 +376,44 @@
 		justify-content: center;
 		flex: 0 0 53%;
 		padding: 14.5% 2% 14.6% 7.6%;
+		@media(max-width: 1189px){
+			width: 60%;
+			flex: 0 0 60%;
+			padding: 14.6% 3% 14.6% 4%;
+			align-items: start;
+		}
+		@media(max-width: 1024px){
+			padding: 12.6% 3% 12.6% 4%;
+		}
+		@media(max-width:768px){
+			width: 100%;
+			padding: 6.6% 3% 6.6% 4%;
+			align-items: center;
+		}
+		@media(max-width: 576px){
+			text-align: center;
+		}
+
 	}
 
 	&__bottom-img {
-		position: absolute;
-		right: 0;
-		top: 0;
-		bottom: -3.125rem;
+		transform: translateY(3.42%);
 		flex: 0 0 47%;
-		background: url("./img/header-bottom/main.jpg") no-repeat;
-		background-size: contain;
 		width: 47%;
-		padding-bottom: 60.3%;
+		img{
+			object-position: bottom;
+		}
+		@media(max-width: 1189px){
+			background-position: bottom;
+			width: 40%;	
+			flex: 0 0 40%;
+		}
+		@media(max-width:768px){
+			width: 70%;
+			transform: translateY(0);
+			margin-bottom: 2rem;
+		}
+
 	}
 }
 
@@ -242,7 +436,36 @@
 			width: 100%;
 			height: 0.067em;
 			background-color: $btnColor;
+			@media(max-width: 768px){
+				top: -0.6rem;
+				left: .3em;
+			}
+			@media(max-width: 576px){
+				display: none;
+			}
 		}
+		@media(max-width: 1189px){
+			font-size: 3.3rem;
+		}
+		@media(max-width: 1024px){
+			font-size: 3rem;
+		}
+		@media(max-width: 845px){
+			font-size: 2.5rem;
+		}
+		@media(max-width: 768px){
+			max-width: 90%;
+			align-self: start;
+			font-size: 2rem;
+		}
+		@media(max-width: 576px){
+			margin-inline: auto;
+		}
+		@media(max-width: 460px){
+			font-size: 1.7rem;
+
+		}
+
 	}
 
 	&__text {
@@ -250,9 +473,38 @@
 		line-height: 1.58;
 		font-family: $fontSecond;
 		margin-bottom: 1.79em;
+		@media(max-width: 1189px){
+			font-size: 1.35rem;
+		}
+		@media(max-width: 1024px){
+			font-size: 1.15rem;
+		}
+		@media(max-width: 845px){
+			font-size: 1rem;
+		}
+		@media(max-width: 768px){
+			max-width: 80%;
+			align-self: start;
+			font-size: 0.9rem;
+			margin-bottom: 1.3em;
+		}
+		@media(max-width: 576px){
+			margin-inline: auto;
+		}
+		@media(max-width: 460px){
+			font-size: 0.8rem;
+		}
+
+
 	}
 
 	&__btns {
+		@media(max-width: 460px){
+			flex-direction: column;
+			width: 95%;
+			gap: .8rem;
+		}
+
 	}
 
 	&__button {
@@ -265,15 +517,29 @@
 	&__row {
 		padding-block: 11% 6%;
 		padding-inline: 2.6%;
-		gap: 1.75rem;
+		gap: 2em 4.6em;
 		border-bottom: 1px solid #dad1ca;
+		@media(max-width: 768px){
+			flex-wrap: wrap;
+			justify-content: center;
+			padding-block: 7% 4%;
+		}
+		@media(max-width: 576px){
+			gap: 1.5em 4.6em;
+		}
+		@media(max-width: 576px){
+			display: block;
+		}
 	}
 
 	&__item {
+		display: flex;
+		flex-direction: column;
 		text-align: center;
 	}
 
 	&__num {
+		flex: 1 1 auto;
 		font-size: 3.75rem;
 		font-weight: 700;
 		line-height: calc(80 / 60);
@@ -282,12 +548,30 @@
 		span {
 			color: $btnColor;
 		}
+		@media(max-width: 1024px){
+			font-size: 3rem;
+			padding-block: 7% 4%;
+		}
+		@media(max-width: 768px){
+			font-size: 2rem;
+			padding-block: 5% 3%;
+		}
+		@media(max-width: 460px){
+			font-size: 1.6rem;
+		}
+
 	}
 
 	&__text {
 		font-size: 1.25rem;
 		line-height: calc(22 / 20);
 		font-family: $fontSecond;
+	}
+	@media(max-width: 768px){
+		font-size: 0.9rem;
+	}
+	@media(max-width: 460px){
+		font-size: 0.7rem;
 	}
 }
 
@@ -302,6 +586,12 @@
 	&__row {
 		column-gap: 1.75rem;
 		padding-block: 16.4%;
+		@media(max-width:768px){
+		padding-block: 12.4%;
+		}
+		@media(max-width:576px){
+			flex-direction: column;
+		}
 	}
 
 	&__item-first {
@@ -313,6 +603,10 @@
 
 .item-first {
 	flex: 1 1 49%;
+	@media(max-width:460px){
+		align-items: center;
+		text-align: center;
+	}
 
 	&__subtitle {
 		color: $btnColor;
@@ -321,6 +615,13 @@
 
 	&__title {
 		margin-bottom: 0.4em;
+		@media(max-width:576px){
+			max-width: 80%;
+		}
+		@media(max-width:460px){
+			margin-inline: auto;
+		}
+		
 	}
 
 	&__text {
@@ -329,6 +630,13 @@
 		font-family: $fontSecond;
 		margin-bottom: 3.11em;
 		max-width: 32.44em;
+		@media(max-width: 768px){
+			font-size: 1rem;
+		}
+		@media(max-width:576px){
+			font-size: 0.9rem;
+			margin-bottom: 2.5em;
+		}
 	}
 
 	&__img {
@@ -347,11 +655,22 @@
 	&__btns {
 		justify-content: flex-end;
 		padding-block: 2.8125rem 3rem;
+		@media(max-width:768px){
+			padding-block: 1.8rem 2.1rem;
+			gap: 0.75rem;
+		}
+		@media(max-width:576px){
+			justify-content: center;
+			padding-block: 2.5rem 5.5rem;
+		}
 	}
 
 	&__img {
 		width: 100%;
 		margin-bottom: 2.9375rem;
+		@media(max-width:460px){
+			margin-bottom: 2rem;
+		}
 	}
 
 	&__text {
@@ -359,6 +678,12 @@
 		line-height: calc(30 / 18);
 		font-family: $fontSecond;
 		margin-bottom: 1.11em;
+		@media(max-width: 768px){
+			font-size: 1rem;
+		}
+		@media(max-width:576px){
+			font-size: 0.9rem;
+		}
 	}
 
 	&__list {
@@ -387,6 +712,9 @@
 		width: 1.444em;
 		height: 1.444em;
 	}
+	@media(max-width: 768px){
+		font-size: 1rem;
+	}
 }
 
 //----------------------------------RESULT
@@ -397,33 +725,80 @@
 	&__row {
 		column-gap: 3.25rem;
 		padding-block: 16.4%;
+		@media(max-width:1024px){
+			column-gap: 1.3rem;
+		}
+		@media(max-width:719px){
+			flex-direction: column;
+			row-gap: 1.5rem;
+		}
 	}
 
 	&__content {
 		flex: 1 1 50%;
+		@media(max-width:1024px){
+			flex: 1 1 55%;
+		}
+		@media(max-width:719px){
+			align-self: center;
+		}
+
 	}
 
 	&__content-subtitle {
 		color: #fab752;
 		margin-bottom: 1em;
+		@media(max-width:719px){
+			text-align: center;
+		}
+
 	}
 
 	&__content-title {
 		max-width: 10.69em;
 		margin-bottom: 0.714em;
+		@media(max-width:719px){
+			text-align: center;
+			max-width: 95%;
+		}
+		@media(max-width:460px){
+			margin-bottom: 2em;
+		}
+
 	}
 
 	&__image {
 		flex: 1 1 50%;
+		@media(max-width:1024px){
+			flex: 1 1 45%;
+		}
+		@media(max-width:719px){
+			align-self: center;
+		}
+
 	}
 }
 
 .result {
+	justify-content: center;
 	&__statistic {
 	}
 
 	&__button {
 		display: inline-block;
+
+		@media(max-width:719px){
+			display: block;
+			max-width: 40%;
+			margin: 0 auto;
+			text-align: center;
+		}
+		@media(max-width:460px){
+			max-width: 60%;
+		}
+
+
+		
 	}
 }
 
@@ -432,15 +807,41 @@
 	grid-template-columns: repeat(auto-fit, minmax(11rem, 1fr));
 	gap: 1.75rem 12%;
 	margin-bottom: 12.35%;
+	@media(max-width:1024px){
+		gap: 1rem;
+	}
+	@media(max-width:719px){
+		grid-template-columns: repeat(2, 1fr);
+		margin-bottom: 15%;
+	}
+	
 
 	&__item {
 		display: flex;
 		column-gap: 1rem;
 		align-items: center;
+		@media(max-width:719px){
+			justify-content: center;
+		}
+		@media(max-width:460px){
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			text-align: center;
+		}
+
+
 	}
 
 	&__image {
 		flex: 0 0 4.75rem;
+		@media(max-width:1024px){
+			max-width: 3rem;
+			max-height: 3rem;
+		}
+		@media(max-width:460px){
+			margin-bottom: 1rem;
+		}
 	}
 
 	&__data {
@@ -452,12 +853,22 @@
 		font-weight: 700;
 		color: $secondColor;
 		margin-bottom: calc(9 / 38) + em;
+		@media(max-width:1024px){
+			font-size: 2rem;
+		}
+		@media(max-width:460px){
+			font-size: 1.6rem;
+		}
 	}
 
 	&__text {
 		font-family: $fontSecond;
 		font-size: 1.125rem;
 		line-height: calc(20 / 18);
+		@media(max-width:1024px){
+			font-size: 1rem;
+
+		}
 	}
 }
 
@@ -536,7 +947,7 @@
 			height: 100%;
 			object-fit: cover;
 		}
-		img{
+		img {
 			position: absolute;
 			transform: translate(-50%, -50%);
 			top: 50%;
@@ -544,15 +955,11 @@
 			object-fit: contain;
 			cursor: pointer;
 		}
-
-	
 	}
-
 
 	&__text-block {
 	}
 }
-
 
 .block-text {
 	gap: 3rem;
@@ -605,7 +1012,6 @@
 		max-width: 13.6em;
 	}
 }
-
 
 .grid-item {
 	display: grid;
@@ -708,15 +1114,15 @@
 		max-width: 10em;
 	}
 
-		&__subtitle {
-			margin-bottom: 1em;
-			color: $btnColor;
-		}
-	
-		&__title {
-			margin-bottom: 0.524em;
-			max-width: 10.36em;
-		}
+	&__subtitle {
+		margin-bottom: 1em;
+		color: $btnColor;
+	}
+
+	&__title {
+		margin-bottom: 0.524em;
+		max-width: 10.36em;
+	}
 }
 
 .image-block {
@@ -731,7 +1137,7 @@
 	position: absolute;
 	bottom: 0;
 	right: -8.7%;
-	font-family: $fontSecond; 
+	font-family: $fontSecond;
 	background: #ffffff;
 	border: 1px solid #f0ece8;
 	box-shadow: 0px 2px 12px rgba(43, 43, 43, 0.06);
@@ -757,9 +1163,7 @@
 		font-size: 1.0625rem;
 		line-height: calc(20 / 17);
 	}
-	
 }
-
 
 //-----------------------NEWS
 
@@ -775,8 +1179,6 @@
 		column-gap: 1.75rem;
 		margin-bottom: 5.33%;
 		padding-bottom: 14rem;
-
-
 	}
 
 	&__btns {
@@ -795,40 +1197,28 @@
 	}
 }
 
-
-
-
-
 .news-body {
-
-	&__wrapper{
-		//position: relative;	
-		//padding-bottom: 23.36%;
-
-	}
-
 	&__item {
 		flex: 1 1 50%;
 	}
 
-	&__image {}
+	&__image {
+	}
 
 	&__card {
 		position: absolute;
 		right: 0;
-		//left: 0;
-		//top: 85.67%;
 		transform: translateY(-26.78%);
-
 	}
 
-	&__title {}
+	&__title {
+	}
 }
 
 .card {
 	max-width: 44.92%;
 	width: 100%;
-	border: 1px solid #F0ECE8;
+	border: 1px solid #f0ece8;
 	box-shadow: 0px 2px 12px rgba(43, 43, 43, 0.08);
 	border-radius: 12px;
 	padding: 4%;
@@ -847,24 +1237,25 @@
 	&__data-tab {
 		color: $secondColor;
 		padding: 0.76em 1.35em 1em;
-		border: 1px solid #F0ECE8;
+		border: 1px solid #f0ece8;
 		border-radius: 6px;
-		transition: .4s;
+		transition: 0.4s;
 		cursor: pointer;
-		&:hover{
+		&:hover {
 			border: 1px solid $btnColor;
 		}
 	}
 
-	&__data-date {}
+	&__data-date {
+	}
 
-	&__title{
+	&__title {
 		color: $secondColor;
 		margin-bottom: 1.21em;
 		max-width: 17.42em;
 	}
 
-	&__link{
+	&__link {
 		position: relative;
 		z-index: 2;
 		display: inline-block;
@@ -874,28 +1265,152 @@
 		font-family: $fontSecond;
 		color: $secondColor;
 		max-width: 5em;
-		&::before{
-			content: '';
+		&::before {
+			content: "";
 			z-index: -1;
 			position: absolute;
-			left: -.6em;
+			left: -0.6em;
 			bottom: 0;
 			width: 2.5em;
 			height: 1em;
 			border-radius: 5px;
 			background-color: #fab752;
-			transition: .4s;
-
+			transition: 0.4s;
 		}
-		&:hover::before{
+		&:hover::before {
 			background-color: $btnColor;
 		}
 	}
-
-
 }
-.card--right{
+.card--right {
 	left: 0;
 }
 
+//---------------------------FOOTER
 
+.footer {
+	&__top {
+		display: flex;
+		padding-block: 13.36% 10.08% ;
+	}
+
+	&__bottom {
+	}
+
+	&__bottom-copyright {
+	}
+}
+
+.footer-top {
+	font-family: $fontSecond;
+	font-size: 1.125rem;
+	line-height: calc(20 / 18);
+
+	&__logo {
+		max-width: 27.54%;
+		margin-right: 4.84%;
+
+		
+	}
+	.logo__img{
+			margin-bottom: 1.6875rem;
+	}
+
+	&__text {
+	}
+
+	&__menu {
+		justify-content: start;
+		margin-right: 2.05%;
+		flex: auto;
+	}
+
+	&__join {
+	}
+}
+
+.footer-menu {
+	font-family: $fontSecond;
+	font-size: 1.125rem;
+	line-height: calc(20 / 18);
+
+	&__title {
+		font-weight: 700;
+		font-size: 1.25rem;
+		line-height: calc(22 / 20);
+		margin-bottom: 2.1em;
+		color: $secondColor;
+	}
+
+	&__list {
+	}
+
+	&__item:not(:last-child) {
+		margin-bottom: 1.222em;
+	}
+
+	&__link {
+	}
+
+	&__utility {
+		margin-right: 4.84%;
+		flex: auto;
+	}
+}
+
+.menu-utility {
+	font-family: $fontSecond;
+	font-size: 1.125rem;
+	line-height: calc(20 / 18);
+
+	&__title {
+		font-weight: 700;
+		font-size: 1.25rem;
+		line-height: calc(22 / 20);
+		color: $secondColor;
+		max-width: 5.19em;
+		margin-bottom: 1.03em;
+	}
+
+	&__list {
+	}
+
+	&__item:not(:last-child) {
+		margin-bottom: 1.222em;
+	}
+
+	&__link {
+	}
+}
+
+.join-footer {
+	max-width: 31.8%;
+	width: 100%;
+
+	&__container {
+	}
+
+	&__wrapper {
+		background: url("./img/news/Frame.jpg");
+		border-radius: 40px;
+		width: 100%;
+		padding: 16.5% 12.37% 12.89%;
+	}
+
+	&__title {
+		margin-bottom: 0.875em;
+	}
+
+	&__btns {
+	}
+
+	&__button {
+	}
+
+	&__button:not(:last-child) {
+		margin-bottom: 0.666em;
+	}
+}
+
+.social {
+}
